--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@capacitor/android": "^7.0.1",
+    "@capacitor/push-notifications": "^7.0.0",
+    "@capacitor/toast": "^7.0.0",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
